# SotN-Editor

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  vcpkg.json
.github/workflows/: Linux.yml  Windows.yml  build_and_release.yml  macOS.yml
imgui/: imgui.h  imgui_widgets.cpp
include/: cluts.h  common.h  compression.h  entities.h  globals.h  gte.h  log.h  map.h  mips.h  rooms.h  sprites.h  tiles.h  utils.h
resources/: icon.icns
src/: compression.cpp  entities.cpp  gte.cpp  log.cpp  main.cpp  map.cpp  mips.cpp  sprites.cpp  utils.cpp
